--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "@types/uuid": "^9.0.1",
-    "@vitejs/plugin-react": "2.2.0",
+    "@vitejs/plugin-react": "4.3.1",
     "prettier": "2.8.4",
-    "typescript": "beta",
-    "vite": "5.2.6"
+    "typescript": "5.5.4",
+    "vite": "5.4.2"
   }
 }
